[gd_scene load_steps=8 format=3 uid="uid://c7wtbljmhfqte"]

[ext_resource type="Script" path="res://scenes/box/clock_box.gd" id="1_1qh40"]
[ext_resource type="Texture2D" uid="uid://copu6kdyqmmrb" path="res://assets/items/clock.png" id="2_jfs78"]
[ext_resource type="AudioStream" uid="uid://4mbyyir1xqur" path="res://assets/audio/tick_clock.ogg" id="3_xbga4"]
[ext_resource type="AudioStream" uid="uid://rj8p46as0ovt" path="res://assets/audio/drag_furniture.ogg" id="4_x7e77"]
[ext_resource type="PackedScene" uid="uid://cx6cef2aykja1" path="res://scenes/interaction/interaction_area.tscn" id="5_t8v86"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7nn6"]
size = Vector2(24, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_j12hm"]
radius = 42.0

[node name="ClockBox" type="CharacterBody2D" node_paths=PackedStringArray("drag_audio_fx", "interaction_area") groups=["minimap_object"]]
collision_layer = 8
collision_mask = 31
script = ExtResource("1_1qh40")
drag_audio_fx = NodePath("AudioStreamPlayer")
interaction_area = NodePath("InteractionArea")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -11)
texture = ExtResource("2_jfs78")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("RectangleShape2D_r7nn6")
debug_color = Color(0.883857, 0.272769, 0.497728, 0.42)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
enable_node_path = NodePath("../ClockTick")

[node name="ClockTick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xbga4")
autoplay = true
mix_target = 2
bus = &"FXs"
parameters/looping = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_x7e77")

[node name="InteractionArea" parent="." node_paths=PackedStringArray("item_sprite") instance=ExtResource("5_t8v86")]
position = Vector2(0, -9)
alt_text = "Empujar"
item_sprite = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
z_index = 1
shape = SubResource("CircleShape2D_j12hm")

[node name="DownRay" type="RayCast2D" parent="."]
z_index = 1
target_position = Vector2(0, 64)
collision_mask = 28

[node name="RightRay" type="RayCast2D" parent="."]
z_index = 1
target_position = Vector2(64, 0)
collision_mask = 28

[node name="LeftRay" type="RayCast2D" parent="."]
z_index = 1
target_position = Vector2(-64, 0)
collision_mask = 28

[node name="UpRay" type="RayCast2D" parent="."]
z_index = 1
target_position = Vector2(0, -64)
collision_mask = 28
